--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
             <li><strong>Ngành học:</strong> Thiết kế giao diện người dùng (UI/UX Design)</li>
             <li><strong>Thời gian học:</strong> 2024 – 2028</li>
             <li><strong>Điểm trung bình (GPA):</strong> 3.6/4.0</li>
-            <li><strong>Thành tích:</strong> Học bổng xuất sắc, Giải Nhất cuộc thi thiết kế UI/UX của trường năm 2017</li>
+            <li><strong>Thành tích:</strong> Học bổng xuất sắc, Giải Nhất cuộc thi thiết kế UI/UX của trường năm 2027</li>
         </ul>
     </section>
 
     <section class="section">
         <h2>Kinh nghiệm làm việc</h2>
-        <h3>Công ty XYZ</h3>
+        <h3>Công ty </h3>
         <p><strong>Thời gian:</strong> 2018 – 2020</p>
         <p><strong>Mô tả nhiệm vụ:</strong> Thiết kế giao diện người dùng cho các sản phẩm ứng dụng di động, website; nghiên cứu và cải thiện trải nghiệm người dùng qua các khảo sát và phản hồi.</p>
         <p><strong>Kết quả đạt được:</strong> Đạt 95% mức độ hài lòng từ người dùng trong các đợt thử nghiệm sản phẩm.</p>
         
         <h3>Dự án: Ứng dụng Học Tiếng Anh</h3>
-        <p><strong>Thời gian:</strong> 2020 – 2021</p>
+        <p><strong>Thời gian:</strong> 2028 – 2030</p>
         <p><strong>Mô tả nhiệm vụ:</strong> Làm việc trong nhóm để phát triển giao diện người dùng cho ứng dụng học tiếng Anh, đảm bảo tính dễ sử dụng và mượt mà trên các nền tảng di động.</p>
         <p><strong>Kết quả:</strong> Tăng số lượng người dùng hàng tháng lên 30% sau 3 tháng ra mắt.</p>
     </section>
@@ -68,8 +68,8 @@
     <section class="section">
         <h2>Giải thưởng / Chứng chỉ / Hoạt động</h2>
         <ul>
-            <li><strong>Chứng chỉ:</strong> UX/UI Design - Coursera, 2021</li>
-            <li><strong>Giải thưởng:</strong> Giải Nhất Cuộc thi Thiết kế UI/UX của FPT University, 2017</li>
+            <li><strong>Chứng chỉ:</strong> UX/UI Design - Coursera, 2027</li>
+            <li><strong>Giải thưởng:</strong> Giải Nhất Cuộc thi Thiết kế UI/UX của Lạc Hồng University, 2026</li>
         </ul>
     </section>
 
